--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Keykubat60/campblog#readme",
   "dependencies": {
     "ejs": "^3.1.9",
+    "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.2.4"
