--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/Keykubat60/campblog#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "joi": "^17.12.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.2.4"
